--- a/generator/templates/echo/routes.hbs
+++ b/generator/templates/echo/routes.hbs
@@ -42,7 +42,7 @@ func RegisterRoutes(engine *echo.Echo) {
 			authErr := {{> AuthorizationCall}}
 			if authErr != nil {
 				return handleAuthorizationError(ctx, authErr, "{{{OperationId}}}")
-			}
+							}
 			controller := {{{Name}}}Import.{{../Name}}{}
 			controller.InitController(ctx)
 			{{#ifAnyParamRequiresConversion FuncParams}}
@@ -52,7 +52,7 @@ func RegisterRoutes(engine *echo.Echo) {
 				{{> RequestArgsParsing}}
 			{{/each}}
 
-		{{#equal HasReturnValue true}}value, {{/equal}}opError := controller.{{{OperationId}}}({{#each FuncParams}}{{ToLowerCamel Name}}{{#unless @last}}, {{/unless}}{{/each}})
+		{{#equal HasReturnValue true}}value, {{/equal}}opError := controller.{{{OperationId}}}({{#each FuncParams}}{{#if TypeMeta.IsByAddress}}{{else}}*{{/if}}{{ToLowerCamel Name}}RawPtr{{#unless @last}}, {{/unless}}{{/each}})
 		{{> ResponseHeaders }}
 
 		{{> ReplyResponse}}
