--- a/generator/templates/echo/partials/function.declarations.hbs
+++ b/generator/templates/echo/partials/function.declarations.hbs
@@ -14,12 +14,15 @@ func getStatusCode(controller external.Controller, hasReturnValue bool, err erro
 	return http.StatusNoContent
 }
 
-func bindAndValidateBody[TOutput any](ctx echo.Context, contentType string, output **TOutput) error {
+func bindAndValidateBody[TOutput any](ctx echo.Context, contentType string, validation string, output **TOutput) error {
 	var err error
-
 	bodyBytes, err := io.ReadAll(ctx.Request().Body)
-	if err != nil {
-		return err
+
+	if err != nil || len(bodyBytes) == 0 {
+		if strings.Contains(validation, "required") {
+			return fmt.Errorf("body is required but was not provided")
+		}
+		return nil
 	}
 
 	var deserializedOutput TOutput
@@ -104,4 +107,18 @@ func handleAuthorizationError(ctx echo.Context, authErr *external.SecurityError,
 		Instance: "/gleece/authorization/error/" + operationId,
 	}
 	return ctx.JSON(statusCode, stdError)
+}
+
+func wrapValidatorError(validatorErr error, operationId string, fieldName string) external.Rfc7807Error {
+	return external.Rfc7807Error{
+		Type:       http.StatusText(http.StatusUnprocessableEntity),
+		Detail:     fmt.Sprintf(
+			"A request was made to operation '%s' but parameter '%s' did not pass validation - %s",
+			operationId,
+			fieldName,
+			validation.ExtractValidationErrorMessage(validatorErr, &fieldName),
+		),
+		Status:     http.StatusUnprocessableEntity,
+		Instance:   fmt.Sprintf("/gleece/validation/error/%s", operationId),
+	}
 }
