Fix custom validation import on more then one controller  in use

--- a/generator/templates/echo/partials/imports.hbs
+++ b/generator/templates/echo/partials/imports.hbs
@@ -26,10 +26,9 @@ import (
 			{{/if}}
 		{{/each}}
 	{{/each}}
-
-	{{#each CustomValidators}}
+{{/each}}
+{{!-- Import Validators --}}
+{{#each CustomValidators}}
 		CustomValidatorPkg{{@index}} "{{{FullPackageName}}}"
-	{{/each}}
-
 {{/each}}
 )
