--- a/generator/templates/gin/partials/imports.hbs
+++ b/generator/templates/gin/partials/imports.hbs
@@ -12,6 +12,7 @@ import (
 	"github.com/gopher-fleece/gleece/external"
 	"github.com/gopher-fleece/gleece/infrastructure/validation"
 	RequestAuth "{{{AuthConfig.AuthFileFullPackageName}}}"
+
 {{#each Controllers}}
 	{{{Name}}}Import "{{{FullyQualifiedPackage}}}"
 	{{#each Routes}}
@@ -26,10 +27,9 @@ import (
 			{{/if}}
 		{{/each}}
 	{{/each}}
-
-	{{#each CustomValidators}}
+{{/each}}
+{{!-- Import Validators --}}
+{{#each CustomValidators}}
 		CustomValidatorPkg{{@index}} "{{{FullPackageName}}}"
-	{{/each}}
-
 {{/each}}
 )
