--- a/generator/templates/gin/partials/imports.hbs
+++ b/generator/templates/gin/partials/imports.hbs
@@ -32,4 +32,9 @@ import (
 {{#each CustomValidators}}
 		CustomValidatorPkg{{@index}} "{{{FullPackageName}}}"
 {{/each}}
+
+{{!-- Import Middlewares --}}
+{{#each Middlewares}}
+		MiddlewarePkg{{@index}} "{{{FullPackageName}}}"
+{{/each}}
 )
