--- a/generator/templates/gin/partials/reply.response.hbs
+++ b/generator/templates/gin/partials/reply.response.hbs
@@ -1,12 +1,25 @@
 statusCode := getStatusCode(&controller, {{{HasReturnValue}}}, opError)
 {{#LastTypeNameEquals Responses "error"}}
+	if opError == nil {
+		{{> Middleware isErrorMiddleware=false MiddlewaresExecution="afterSucceedOperation" }} 
+	}
 	if opError != nil {
+		{{> Middleware isErrorMiddleware=true MiddlewaresExecution="onError" }} 
 {{else}}
 	{{#LastTypeIsByAddress Responses}}
+		if opError == nil {
+			{{> Middleware isErrorMiddleware=false MiddlewaresExecution="afterSucceedOperation" }} 
+		}
 		if opError != nil {
+			{{> Middleware isErrorMiddleware=true MiddlewaresExecution="onError" }} 
 	{{else}}
 		emptyErr := {{GetLastTyeFullyQualified Responses}}{}
+		if opError == emptyErr {
+			{{> Middleware isErrorMiddleware=false MiddlewaresExecution="afterSucceedOperation" }} 
+		}
 		if opError != emptyErr {
+			{{> Middleware isErrorMiddleware=true MiddlewaresExecution="onError" }} 
+
 	{{/LastTypeIsByAddress}}
 {{/LastTypeNameEquals}}
 	{{#equal ResponseContentType "application/json"}}
