--- a/generator/templates/echo/partials/imports.hbs
+++ b/generator/templates/echo/partials/imports.hbs
@@ -31,4 +31,9 @@ import (
 {{#each CustomValidators}}
 		CustomValidatorPkg{{@index}} "{{{FullPackageName}}}"
 {{/each}}
+
+{{!-- Import Middlewares --}}
+{{#each Middlewares}}
+		MiddlewarePkg{{@index}} "{{{FullPackageName}}}"
+{{/each}}
 )
