Implement Mux middlewares

--- a/generator/templates/mux/routes.hbs
+++ b/generator/templates/mux/routes.hbs
@@ -54,6 +54,7 @@ func RegisterRoutes(engine *mux.Router) {
 				{{> RequestArgsParsing}}
 			{{/each}}
 
+		{{> Middleware isErrorMiddleware=false MiddlewaresExecution="beforeOperation" }} 
 		{{#equal HasReturnValue true}}value, {{/equal}}opError := controller.{{{OperationId}}}({{#each FuncParams}}{{#if TypeMeta.IsByAddress}}{{else}}*{{/if}}{{ToLowerCamel Name}}RawPtr{{#unless @last}}, {{/unless}}{{/each}})
 		{{> ResponseHeaders }}
 
