--- a/generator/templates/gin/routes.hbs
+++ b/generator/templates/gin/routes.hbs
@@ -53,7 +53,7 @@ func RegisterRoutes(engine *gin.Engine) {
 				{{> RequestArgsParsing}}
 			{{/each}}
 
-		{{> Middleware isErrorMiddleware=false MiddlewaresExecution="beforeOperation" }} 
+		{{> Middleware isErrorMiddleware=false middlewaresExecution="beforeOperation" }} 
 		{{#equal HasReturnValue true}}value, {{/equal}}opError := controller.{{{OperationId}}}({{#each FuncParams}}{{#if TypeMeta.IsByAddress}}{{else}}*{{/if}}{{ToLowerCamel Name}}RawPtr{{#unless @last}}, {{/unless}}{{/each}})
 		{{> ResponseHeaders }}
 		
