--- a/generator/templates/echo/routes.hbs
+++ b/generator/templates/echo/routes.hbs
@@ -52,6 +52,7 @@ func RegisterRoutes(engine *echo.Echo) {
 				{{> RequestArgsParsing}}
 			{{/each}}
 
+		{{> Middleware isErrorMiddleware=false middlewaresExecution="beforeOperation" }} 
 		{{#equal HasReturnValue true}}value, {{/equal}}opError := controller.{{{OperationId}}}({{#each FuncParams}}{{#if TypeMeta.IsByAddress}}{{else}}*{{/if}}{{ToLowerCamel Name}}RawPtr{{#unless @last}}, {{/unless}}{{/each}})
 		{{> ResponseHeaders }}
 
