Rename external to runtime and set as independent package

--- a/generator/templates/chi/partials/authorization.call.hbs
+++ b/generator/templates/chi/partials/authorization.call.hbs
@@ -4,7 +4,7 @@ authorize(
 		{
 			{{#each SecurityAnnotation}} 
 			Relation: SecurityListRelationAnd,
-			Checks: []external.SecurityCheck {
+			Checks: []runtime.SecurityCheck {
 				{
 					SchemaName: "{{{SchemaName}}}",
 					Scopes: []string{
