--- a/generator/templates/chi/partials/type.declarations.hbs
+++ b/generator/templates/chi/partials/type.declarations.hbs
@@ -5,6 +5,6 @@ const (
 )
 
 type SecurityCheckList struct {
-	Checks   []external.SecurityCheck
+	Checks   []runtime.SecurityCheck
 	Relation SecurityListRelation
 }
