--- a/generator/templates/mux/partials/function.declarations.hbs
+++ b/generator/templates/mux/partials/function.declarations.hbs
@@ -1,4 +1,4 @@
-func getStatusCode(controller external.Controller, hasReturnValue bool, err error) int {
+func getStatusCode(controller runtime.Controller, hasReturnValue bool, err error) int {
 	if controller.GetStatus() != nil {
 		return int(*controller.GetStatus())
 	} 
@@ -49,8 +49,8 @@ func toMuxUrl(url string) string {
 	return url
 }
 
-func authorize(ctx *http.Request, checksLists []SecurityCheckList) *external.SecurityError {
-	var lastError *external.SecurityError
+func authorize(ctx *http.Request, checksLists []SecurityCheckList) *runtime.SecurityError {
+	var lastError *runtime.SecurityError
 
 	for _, list := range checksLists {
 		if list.Relation != SecurityListRelationAnd {
@@ -82,7 +82,7 @@ func authorize(ctx *http.Request, checksLists []SecurityCheckList) *external.Sec
 	return lastError
 }
 
-func handleAuthorizationError(w http.ResponseWriter, authErr *external.SecurityError, operationId string) {
+func handleAuthorizationError(w http.ResponseWriter, authErr *runtime.SecurityError, operationId string) {
 	statusCode := int(authErr.StatusCode)
 	if authErr.CustomError != nil {
 		// For now, we support JSON only
@@ -90,7 +90,7 @@ func handleAuthorizationError(w http.ResponseWriter, authErr *external.SecurityE
 		json.NewEncoder(w).Encode(authErr.CustomError.Payload)
 		return
 	} 
-	stdError := external.Rfc7807Error{
+	stdError := runtime.Rfc7807Error{
 		Type:     http.StatusText(statusCode),
 		Detail:   authErr.Message,
 		Status:   statusCode,
@@ -100,14 +100,14 @@ func handleAuthorizationError(w http.ResponseWriter, authErr *external.SecurityE
 	json.NewEncoder(w).Encode(stdError)
 }
 
-func wrapValidatorError(validatorErr error, operationId string, fieldName string) external.Rfc7807Error {
-	return external.Rfc7807Error{
+func wrapValidatorError(validatorErr error, operationId string, fieldName string) runtime.Rfc7807Error {
+	return runtime.Rfc7807Error{
 		Type:       http.StatusText(http.StatusUnprocessableEntity),
 		Detail:     fmt.Sprintf(
 			"A request was made to operation '%s' but parameter '%s' did not pass validation - %s",
 			operationId,
 			fieldName,
-			validation.ExtractValidationErrorMessage(validatorErr, &fieldName),
+			runtime.ExtractValidationErrorMessage(validatorErr, &fieldName),
 		),
 		Status:     http.StatusUnprocessableEntity,
 		Instance:   fmt.Sprintf("/gleece/validation/error/%s", operationId),
