--- a/generator/templates/echo/partials/json.body.validation.error.response.hbs
+++ b/generator/templates/echo/partials/json.body.validation.error.response.hbs
@@ -1,10 +1,10 @@
-validationError := external.Rfc7807Error{
+validationError := runtime.Rfc7807Error{
 	Type:       http.StatusText(http.StatusUnprocessableEntity),
 	Detail:     fmt.Sprintf(
 		"A request was made to operation '{{{OperationId}}}' but body parameter '%s' did not pass validation of '%s' - %s",
 		"{{ToLowerCamel Name}}",
 		"{{{TypeMeta.Name}}}",
-		validation.ExtractValidationErrorMessage(conversionErr, nil),
+		runtime.ExtractValidationErrorMessage(conversionErr, nil),
 	),
 	Status:     http.StatusUnprocessableEntity,
 	Instance:   "/gleece/validation/error/{{{OperationId}}}",
