--- a/generator/templates/fiber/partials/json.error.response.hbs
+++ b/generator/templates/fiber/partials/json.error.response.hbs
@@ -1,6 +1,6 @@
 {{#LastTypeNameEquals Responses "error"}}
 
-stdError := external.Rfc7807Error{
+stdError := runtime.Rfc7807Error{
 	Type:       http.StatusText(statusCode),
 	Detail:     "Encountered an error during operation '{{{OperationId}}}'",
 	Status:     statusCode,
