--- a/generator/templates/mux/partials/json.validation.error.response.hbs
+++ b/generator/templates/mux/partials/json.validation.error.response.hbs
@@ -1,4 +1,4 @@
-validationError := external.Rfc7807Error{
+validationError := runtime.Rfc7807Error{
 	Type:       http.StatusText(http.StatusUnprocessableEntity),
 	Detail:     fmt.Sprintf(
 		"A request was made to operation '{{{OperationId}}}' but parameter '%s' was not properly sent - Expected %s but got %s",
