--- a/generator/templates/echo/partials/middleware.hbs
+++ b/generator/templates/echo/partials/middleware.hbs
@@ -1,13 +1,13 @@
-{{#each Middlewares}}
-	{{#equal Execution middlewaresExecution }}
-		{{#if isErrorMiddleware}}
-		if continueOperation := MiddlewarePkg{{@index}}.{{{FunctionName}}}(ctx, opError); continueOperation == false {
+// Middlewares {{middlewares}} section
+for _, middleware := range {{middlewares}} {
+	{{#if isErrorMiddleware}}
+		if continueOperation := middleware(ctx, opError); continueOperation == false {
 			return nil
 		}
-		{{else}}
-		if continueOperation := MiddlewarePkg{{@index}}.{{{FunctionName}}}(ctx); continueOperation == false {
+	{{else}}
+		if continueOperation := middleware(ctx); continueOperation == false {
 			return nil
 		}
-		{{/if}}
-	{{/equal}}
-{{/each}}
+	{{/if}}
+}
+// End middlewares {{middlewares}} section
