--- a/generator/templates/chi/partials/type.declarations.hbs
+++ b/generator/templates/chi/partials/type.declarations.hbs
@@ -8,3 +8,5 @@ type SecurityCheckList struct {
 	Checks   []runtime.SecurityCheck
 	Relation SecurityListRelation
 }
+
+{{> TypeDeclarationsExtension}}
