--- a/generator/templates/gin/partials/function.declarations.hbs
+++ b/generator/templates/gin/partials/function.declarations.hbs
@@ -121,3 +121,5 @@ func wrapValidatorError(validatorErr error, operationId string, fieldName string
 		Instance:   fmt.Sprintf("/gleece/validation/error/%s", operationId),
 	}
 }
+
+{{> FunctionDeclarationsExtension }}
