--- a/generator/templates/chi/partials/json.response.hbs
+++ b/generator/templates/chi/partials/json.response.hbs
@@ -1,3 +1,4 @@
+{{> JsonResponseExtension}}
 {{#equal HasReturnValue true}}
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(statusCode)
