--- a/generator/templates/echo/partials/json.body.validation.error.response.hbs
+++ b/generator/templates/echo/partials/json.body.validation.error.response.hbs
@@ -9,4 +9,5 @@ validationError := runtime.Rfc7807Error{
 	Status:     http.StatusUnprocessableEntity,
 	Instance:   "/gleece/validation/error/{{{OperationId}}}",
 }
+{{> JsonBodyValidationErrorResponseExtension}}
 return ctx.JSON(http.StatusUnprocessableEntity, validationError)
