--- a/generator/templates/fiber/partials/json.error.response.hbs
+++ b/generator/templates/fiber/partials/json.error.response.hbs
@@ -7,6 +7,7 @@ stdError := runtime.Rfc7807Error{
 	Instance:   "/gleece/controller/error/{{{OperationId}}}",
 	Extensions: map[string]string{"error": opError.Error()},
 }
+{{> JsonErrorResponseExtension}}
 return ctx.Status(statusCode).JSON(stdError)
 {{else}}
 return ctx.Status(statusCode).JSON(opError)
