--- a/generator/templates/gin/partials/json.validation.error.response.hbs
+++ b/generator/templates/gin/partials/json.validation.error.response.hbs
@@ -10,5 +10,6 @@ validationError := runtime.Rfc7807Error{
 	Instance:   "/gleece/validation/error/{{{OperationId}}}",
 	Extensions: map[string]string{"error": conversionErr.Error()},
 }
+{{> JsonValidationErrorResponseExtension}}
 ctx.JSON(http.StatusUnprocessableEntity, validationError)
 return
