--- a/generator/templates/gin/routes.hbs
+++ b/generator/templates/gin/routes.hbs
@@ -37,10 +37,15 @@ func RegisterCustomValidator(validateTagName string, validateFunc runtime.Valida
 func RegisterRoutes(engine *gin.Engine) {
 	urlParamRegex = regexp.MustCompile(`\{([\w\d-_]+)\}`)
 
+	{{> RegisterRoutesExtension }}
+
 {{#each Controllers}}
 	// {{{Name}}}
+
 	{{#each Routes}}
 		engine.{{{HttpVerb}}}(toGinUrl("{{{../RestMetadata.Path}}}{{{RestMetadata.Path}}}"), func(ctx *gin.Context) {
+			{{> RouteStartRoutesExtension }}
+			
 			authErr := {{> AuthorizationCall}}
 			if authErr != nil {
 				handleAuthorizationError(ctx, authErr, "{{{OperationId}}}")
@@ -56,9 +61,14 @@ func RegisterRoutes(engine *gin.Engine) {
 			{{/each}}
 
 		{{> Middleware isErrorMiddleware=false middlewares="beforeOperationMiddlewares" }} 
+		{{> BeforeOperationRoutesExtension }}
 		{{#equal HasReturnValue true}}value, {{/equal}}opError := controller.{{{OperationId}}}({{#each FuncParams}}{{#if TypeMeta.IsByAddress}}{{else}}*{{/if}}{{ToLowerCamel Name}}RawPtr{{#unless @last}}, {{/unless}}{{/each}})
+		{{> AfterOperationRoutesExtension }}
+		
 		{{> ResponseHeaders }}
 		
+		{{> RouteEndRoutesExtension }}
+
 		{{> ReplyResponse}}
 	})
 
