--- a/generator/templates/mux/partials/function.declarations.hbs
+++ b/generator/templates/mux/partials/function.declarations.hbs
@@ -113,3 +113,5 @@ func wrapValidatorError(validatorErr error, operationId string, fieldName string
 		Instance:   fmt.Sprintf("/gleece/validation/error/%s", operationId),
 	}
 }
+
+{{> FunctionDeclarationsExtension }}
