--- a/generator/templates/mux/partials/json.body.validation.error.response.hbs
+++ b/generator/templates/mux/partials/json.body.validation.error.response.hbs
@@ -9,6 +9,7 @@ validationError := runtime.Rfc7807Error{
 	Status:     http.StatusUnprocessableEntity,
 	Instance:   "/gleece/validation/error/{{{OperationId}}}",
 }
+{{> JsonBodyValidationErrorResponseExtension}}
 w.WriteHeader(http.StatusUnprocessableEntity)
 json.NewEncoder(w).Encode(validationError)
 return
