--- a/generator/templates/mux/partials/json.validation.error.response.hbs
+++ b/generator/templates/mux/partials/json.validation.error.response.hbs
@@ -10,6 +10,7 @@ validationError := runtime.Rfc7807Error{
 	Instance:   "/gleece/validation/error/{{{OperationId}}}",
 	Extensions: map[string]string{"error": conversionErr.Error()},
 }
+{{> JsonValidationErrorResponseExtension}}
 w.WriteHeader(http.StatusUnprocessableEntity)
 json.NewEncoder(w).Encode(validationError)
 return
