--- a/generator/templates/mux/routes.hbs
+++ b/generator/templates/mux/routes.hbs
@@ -37,10 +37,14 @@ func RegisterCustomValidator(validateTagName string, validateFunc runtime.Valida
 func RegisterRoutes(engine *mux.Router) {
 	urlParamRegex = regexp.MustCompile(`\{([\w\d-_]+)\}`)
 
+	{{> RegisterRoutesExtension }}
+
 {{#each Controllers}}
 	// {{{Name}}}
 	{{#each Routes}}
 		engine.HandleFunc(toMuxUrl("{{{../RestMetadata.Path}}}{{{RestMetadata.Path}}}"), func(w http.ResponseWriter, ctx *http.Request) {
+			{{> RouteStartRoutesExtension }}
+			
 			authErr := {{> AuthorizationCall}}
 			if authErr != nil {
 				handleAuthorizationError(w, authErr, "{{{OperationId}}}")
@@ -56,9 +60,14 @@ func RegisterRoutes(engine *mux.Router) {
 			{{/each}}
 
 		{{> Middleware isErrorMiddleware=false middlewares="beforeOperationMiddlewares" }} 
+		{{> BeforeOperationRoutesExtension }}
 		{{#equal HasReturnValue true}}value, {{/equal}}opError := controller.{{{OperationId}}}({{#each FuncParams}}{{#if TypeMeta.IsByAddress}}{{else}}*{{/if}}{{ToLowerCamel Name}}RawPtr{{#unless @last}}, {{/unless}}{{/each}})
+		{{> AfterOperationRoutesExtension }}
+		
 		{{> ResponseHeaders }}
 		
+		{{> RouteEndRoutesExtension }}
+
 		{{> ReplyResponse}}
 	}).Methods("{{{HttpVerb}}}")
 
