--- a/e2e/echo/assets/echo.end.route.extension.hbs
+++ b/e2e/echo/assets/echo.end.route.extension.hbs
@@ -1,1 +1,10 @@
 ctx.Response().Header().Set("x-extended", "{{{ OperationId }}}")
+
+{{#each CustomContext}}
+    {{#equal Value "MODE"}}
+        ctx.Response().Header().Set("x-mode", "{{{ Options.mode }}}")
+    {{/equal}}
+    {{#equal Value "LEVEL"}}
+        ctx.Response().Header().Set("x-level", "{{{ Options.value }}}")
+    {{/equal}}
+{{/each}}
