--- a/e2e/gin/assets/gin.end.route.extension.hbs
+++ b/e2e/gin/assets/gin.end.route.extension.hbs
@@ -1,1 +1,10 @@
 ctx.Header("x-extended", "{{{ OperationId }}}")
+
+{{#each CustomContext}}
+    {{#equal Value "MODE"}}
+        ctx.Header("x-mode", "{{{ Options.mode }}}")
+    {{/equal}}
+    {{#equal Value "LEVEL"}}
+        ctx.Header("x-level", "{{{ Options.value }}}")
+    {{/equal}}
+{{/each}}
