--- a/e2e/mux/assets/mux.end.route.extension.hbs
+++ b/e2e/mux/assets/mux.end.route.extension.hbs
@@ -1,1 +1,10 @@
 w.Header().Set("x-extended", "{{{ OperationId }}}")
+
+{{#each CustomContext}}
+    {{#equal Value "MODE"}}
+        w.Header().Set("x-mode", "{{{ Options.mode }}}")
+    {{/equal}}
+    {{#equal Value "LEVEL"}}
+        w.Header().Set("x-level", "{{{ Options.value }}}")
+    {{/equal}}
+{{/each}}
