--- a/e2e/fiber/assets/fiber.end.route.extension.hbs
+++ b/e2e/fiber/assets/fiber.end.route.extension.hbs
@@ -1,10 +1,8 @@
 ctx.Set("x-extended", "{{{ OperationId }}}")
 
-{{#each CustomContext}}
-    {{#equal Value "MODE"}}
-        ctx.Set("x-mode", "{{{ Options.mode }}}")
-    {{/equal}}
-    {{#equal Value "LEVEL"}}
-        ctx.Set("x-level", "{{{ Options.value }}}")
-    {{/equal}}
-{{/each}}
+{{#if TemplateContext.MODE }}
+        ctx.Set("x-mode", "{{{ TemplateContext.MODE.Options.mode }}}")
+{{/if }}
+{{#if TemplateContext.LEVEL }}
+        ctx.Set("x-level", "{{{ TemplateContext.LEVEL.Options.value }}}")
+{{/if }}
