Adding Template Custom Context (#25)

--- a/e2e/fiber/assets/fiber.end.route.extension.hbs
+++ b/e2e/fiber/assets/fiber.end.route.extension.hbs
@@ -1,1 +1,8 @@
 ctx.Set("x-extended", "{{{ OperationId }}}")
+
+{{#if TemplateContext.MODE }}
+        ctx.Set("x-mode", "{{{ TemplateContext.MODE.Options.mode }}}")
+{{/if }}
+{{#if TemplateContext.LEVEL }}
+        ctx.Set("x-level", "{{{ TemplateContext.LEVEL.Options.value }}}")
+{{/if }}
