--- a/e2e/chi/assets/chi.end.route.extension.hbs
+++ b/e2e/chi/assets/chi.end.route.extension.hbs
@@ -1,1 +1,8 @@
 w.Header().Set("x-extended", "{{{ OperationId }}}")
+
+{{#if TemplateContext.MODE }}
+    w.Header().Set("x-mode", "{{{ TemplateContext.MODE.Options.mode }}}")
+{{/if }}
+{{#if TemplateContext.LEVEL }}
+    w.Header().Set("x-level", "{{{ TemplateContext.LEVEL.Options.value }}}")
+{{/if }}
