--- a/e2e/echo/assets/echo.end.route.extension.hbs
+++ b/e2e/echo/assets/echo.end.route.extension.hbs
@@ -1,1 +1,8 @@
 ctx.Response().Header().Set("x-extended", "{{{ OperationId }}}")
+
+{{#if TemplateContext.MODE }}
+        ctx.Response().Header().Set("x-mode", "{{{ TemplateContext.MODE.Options.mode }}}")
+{{/if }}
+{{#if TemplateContext.LEVEL }}
+        ctx.Response().Header().Set("x-level", "{{{ TemplateContext.LEVEL.Options.value }}}")
+{{/if }}
