--- a/generator/templates/chi/partials/json.body.validation.error.response.hbs
+++ b/generator/templates/chi/partials/json.body.validation.error.response.hbs
@@ -4,7 +4,7 @@ validationError := runtime.Rfc7807Error{
 		"A request was made to operation '{{{OperationId}}}' but body parameter '%s' did not pass validation of '%s' - %s",
 		"{{ToLowerCamel Name}}",
 		"{{{TypeMeta.Name}}}",
-		runtime.ExtractValidationErrorMessage(conversionErr, nil),
+		extractValidationErrorMessage(conversionErr, nil),
 	),
 	Status:     http.StatusUnprocessableEntity,
 	Instance:   "/gleece/validation/error/{{{OperationId}}}",
