--- a/generator/templates/gin/partials/request.args.parsing.hbs
+++ b/generator/templates/gin/partials/request.args.parsing.hbs
@@ -21,6 +21,13 @@
 	{{> RunValidator}}
 {{/equal}}
 
+{{#equal PassedIn "Form"}}
+	var {{ToLowerCamel Name}}RawPtr *{{{TypeMeta.Name}}} = nil
+	{{ToLowerCamel Name}}Raw, is{{Name}}Exists := ctx.GetPostForm("{{{NameInSchema}}}")
+	{{> RequestSwitchParamType}}
+	{{> RunValidator}}
+{{/equal}}
+
 {{#equal PassedIn "Body"}}
 	var {{ToLowerCamel Name}}RawPtr *{{#if TypeMeta.FullyQualifiedPackage}}Param{{{UniqueImportSerial}}}{{{Name}}}.{{/if}}{{{TypeMeta.Name}}} = nil
 	conversionErr = bindAndValidateBody(ctx, "{{{ResponseContentType}}}", "{{Validator}}",&{{ToLowerCamel Name}}RawPtr)
