--- a/generator/templates/echo/partials/request.args.parsing.hbs
+++ b/generator/templates/echo/partials/request.args.parsing.hbs
@@ -28,6 +28,19 @@
 	{{> RunValidator}}
 {{/equal}}
 
+{{#equal PassedIn "Form"}}
+	ctx.Request().ParseForm()
+	var {{ToLowerCamel Name}}RawPtr *{{{TypeMeta.Name}}} = nil
+	{{ToLowerCamel Name}}RawArr, is{{Name}}Exists := ctx.Request().PostForm["{{{NameInSchema}}}"]
+	{{ToLowerCamel Name}}Raw := ""
+	if is{{Name}}Exists {
+		{{ToLowerCamel Name}}Raw = {{ToLowerCamel Name}}RawArr[0] // Get first value since form values are slices
+	}
+	
+	{{> RequestSwitchParamType}}
+	{{> RunValidator}}
+{{/equal}}
+
 {{#equal PassedIn "Body"}}
 	var {{ToLowerCamel Name}}RawPtr *{{#if TypeMeta.FullyQualifiedPackage}}Param{{{UniqueImportSerial}}}{{{Name}}}.{{/if}}{{{TypeMeta.Name}}} = nil
 	conversionErr = bindAndValidateBody(ctx, "{{{ResponseContentType}}}", "{{Validator}}",&{{ToLowerCamel Name}}RawPtr)
