Add Output Validation + On Validation Error Middleware

--- a/generator/templates/gin/partials/middleware.hbs
+++ b/generator/templates/gin/partials/middleware.hbs
@@ -1,7 +1,7 @@
 // Middlewares {{middlewares}} section
 for _, middleware := range {{middlewares}} {
 	{{#if isErrorMiddleware}}
-		if continueOperation := middleware(ctx, opError); continueOperation == false {
+		if continueOperation := middleware(ctx, {{errorName}}); continueOperation == false {
 			return
 		}
 	{{else}}
