--- a/generator/templates/fiber/partials/middleware.hbs
+++ b/generator/templates/fiber/partials/middleware.hbs
@@ -1,11 +1,11 @@
 // Middlewares {{middlewares}} section
 for _, middleware := range {{middlewares}} {
 	{{#if isErrorMiddleware}}
-		if continueOperation := middleware(ctx, opError); continueOperation == false {
+		if continueOperation := middleware(ctx, opError); !continueOperation {
 			return nil
 		}
 	{{else}}
-		if continueOperation := middleware(ctx); continueOperation == false {
+		if continueOperation := middleware(ctx); !continueOperation {
 			return nil
 		}
 	{{/if}}
